cluster/infra/envoy-system/gateway/main/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: main
spec:
  gatewayClassName: envoy
  addresses:
    - type: IPAddress
      value: &ip 192.168.0.151

  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: *ip
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: main-proxy-config

  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: '*.${DOMAIN_NAME}'
      allowedRoutes:
        namespaces:
          from: Same

    - name: https
      protocol: HTTPS
      port: 443
      hostname: '*.${DOMAIN_NAME}'
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: wildcard-main-tls
